# practive_c-

./: CMakeLists.txt  LICENSE  README.md  init.lua
docs/website/: index.html
include/core/: asset_manager.hpp  asset_types.hpp  camera_control.hpp  components.hpp  ecs.hpp  input.hpp
include/physics/: collision.hpp  particle.hpp  rigidbody.hpp
include/rendering/: mesh.hpp  shader.hpp  vulkan_renderer.hpp
include/scripting/: lua_system.hpp
src/: main.cpp
src/core/: asset_manager.cpp  camera_control.cpp  ecs.cpp  input.cpp
src/physics/: collision.cpp  particle.cpp  rigidbody.cpp
src/rendering/: mesh.cpp  shader.cpp  vulkan_renderer.cpp
src/scripting/: lua_system.cpp
